resolved dark mode issue

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .dark{
-  color: white;
+  color: grey;
   background-color: black;
 }
 
